--- a/arch/arm64/configs/ARB_z2_plus_defconfig
+++ b/arch/arm64/configs/ARB_z2_plus_defconfig
@@ -4315,7 +4315,7 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_SECURITY_SMACK is not set
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
-CONFIG_SECURITY_YAMA=y
+CONFIG_SECURITY_YAMA=n
 CONFIG_INTEGRITY=y
 # CONFIG_INTEGRITY_SIGNATURE is not set
 CONFIG_INTEGRITY_AUDIT=y
