dts: zuk: common: add bootargs
For some reason parsing from msm8996.dtsi doesn't work.

Signed-off-by: Yaroslav Furman <yaro330@gmail.com>
Signed-off-by: AyushR1 <ayushrathore12501@gmail.com>

--- a/arch/arm/boot/dts/qcom/zuk/common.dtsi
+++ b/arch/arm/boot/dts/qcom/zuk/common.dtsi
@@ -18,6 +18,9 @@
 		/delete-property/ i2c12;
 		/delete-property/ spi12;
 	};
+	chosen {
+		bootargs = "fpsimd.fpsimd_settings=1 app_setting.use_app_setting=1 app_setting.use_32bit_app_setting=1";
+	};
 };
 
 &soc {
