--- a/arch/arm64/configs/ARB_z2_plus_defconfig
+++ b/arch/arm64/configs/ARB_z2_plus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.164-ARB-PXL2 Kernel Configuration
+# Linux/arm64 4.4.166-ARB-PXL2 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -215,7 +215,6 @@ CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 # CONFIG_SYSTEM_DATA_VERIFICATION is not set
 CONFIG_PROFILING=y
-CONFIG_TRACEPOINTS=y
 CONFIG_JUMP_LABEL=y
 # CONFIG_STATIC_KEYS_SELFTEST is not set
 # CONFIG_UPROBES is not set
@@ -311,11 +310,10 @@ CONFIG_BLOCK_COMPAT=y
 #
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
-CONFIG_IOSCHED_DEADLINE=y
+# CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_CFQ_GROUP_IOSCHED is not set
 # CONFIG_IOSCHED_BFQ is not set
-# CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
@@ -433,7 +431,6 @@ CONFIG_HAVE_ARCH_PFN_VALID=y
 CONFIG_HW_PERF_EVENTS=y
 CONFIG_ARM64_REG_REBALANCE_ON_CTX_SW=y
 # CONFIG_PERF_EVENTS_USERMODE is not set
-# CONFIG_PERF_EVENTS_RESET_PMU_DEBUGFS is not set
 CONFIG_SYS_SUPPORTS_HUGETLBFS=y
 CONFIG_ARCH_WANT_HUGE_PMD_SHARE=y
 CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
@@ -620,8 +617,6 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
-CONFIG_WIREGUARD=n
-# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
@@ -1062,7 +1057,6 @@ CONFIG_SOCKEV_NLMCAST=y
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
-# CONFIG_NET_DROP_MONITOR is not set
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
@@ -1258,6 +1252,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_QPNP_MISC is not set
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 # CONFIG_MEMORY_STATE_TIME is not set
+# CONFIG_FORCE_FAST_CHARGE is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -1797,7 +1792,7 @@ CONFIG_TOUCHSCREEN_GT9X_V24=y
 # CONFIG_TOUCHSCREEN_GT1151 is not set
 # CONFIG_TOUCHSCREEN_ROHM_BU21023 is not set
 # CONFIG_TOUCHSCREEN_MAXIM_STI is not set
-CONFIG_SECURE_TOUCH=n
+# CONFIG_SECURE_TOUCH is not set
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_IT7260_I2C is not set
@@ -3612,11 +3607,8 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
-# CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
-CONFIG_ANDROID_SIMPLE_LMK=y
-CONFIG_ANDROID_SIMPLE_LMK_MINFREE=64
-CONFIG_ANDROID_SIMPLE_LMK_KSWAPD_TIMEOUT=100
-CONFIG_ANDROID_SIMPLE_LMK_OOM_TIMEOUT=50
+CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
@@ -3680,7 +3672,7 @@ CONFIG_MSM_MHI=y
 CONFIG_MSM_MHI_UCI=y
 # CONFIG_MSM_MHI_DEBUG is not set
 # CONFIG_MSM_11AD is not set
-CONFIG_SEEMP_CORE=y
+# CONFIG_SEEMP_CORE is not set
 CONFIG_USB_BAM=y
 # CONFIG_MSM_EXT_DISPLAY is not set
 CONFIG_MACH_ZUK=y
@@ -3769,7 +3761,7 @@ CONFIG_MSM_GLINK_SMEM_NATIVE_XPRT=y
 # CONFIG_MSM_SPSS_UTILS is not set
 # CONFIG_MSM_SMEM_LOGGING is not set
 CONFIG_MSM_SMP2P=y
-CONFIG_MSM_SMP2P_TEST=n
+# CONFIG_MSM_SMP2P_TEST is not set
 CONFIG_MSM_QMI_INTERFACE=y
 # CONFIG_MSM_L2_IA_DEBUG is not set
 CONFIG_MSM_RPM_SMD=y
@@ -3817,9 +3809,7 @@ CONFIG_MSM_QDSP6_APRV2=y
 CONFIG_MSM_ADSP_LOADER=y
 # CONFIG_MSM_CDSP_LOADER is not set
 # CONFIG_MSM_LPASS_RESOURCE_MANAGER is not set
-CONFIG_MSM_PERFORMANCE=n
-# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
-# CONFIG_MSM_PERFORMANCE_CPUFREQ_LIMITS_VOTING_ONLY is not set
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 # CONFIG_MSM_SYSMON_COMM is not set
 CONFIG_MSM_PIL=y
@@ -3836,7 +3826,7 @@ CONFIG_MSM_KERNEL_PROTECT=y
 # CONFIG_MSM_QBT1000 is not set
 # CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
 # CONFIG_MSM_RPM_LOG is not set
-# CONFIG_MSM_RPM_STATS_LOG is not set
+CONFIG_MSM_RPM_STATS_LOG=y
 # CONFIG_QSEE_IPC_IRQ_BRIDGE is not set
 # CONFIG_WCD_DSP_GLINK is not set
 # CONFIG_QCOM_SMCINVOKE is not set
@@ -3960,7 +3950,7 @@ CONFIG_ARM_PSCI_FW=y
 # CONFIG_FIRMWARE_MEMMAP is not set
 CONFIG_QCOM_SCM_64=y
 CONFIG_HAVE_ARM_SMCCC=y
-CONFIG_MSM_TZ_LOG=y
+# CONFIG_MSM_TZ_LOG is not set
 # CONFIG_BIF is not set
 CONFIG_SENSORS_SSC=y
 # CONFIG_TEE is not set
@@ -4210,43 +4200,16 @@ CONFIG_DEBUG_BUGVERBOSE=y
 # CONFIG_TORTURE_TEST is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=21
 # CONFIG_RCU_STALL_WATCHDOG_BITE is not set
-CONFIG_NOP_TRACER=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
-CONFIG_TRACE_CLOCK=y
-CONFIG_RING_BUFFER=y
-CONFIG_EVENT_TRACING=y
-CONFIG_CONTEXT_SWITCH_TRACER=y
 # CONFIG_IPC_LOGGING is not set
 # CONFIG_QCOM_RTB is not set
-CONFIG_TRACING=y
-CONFIG_GENERIC_TRACER=y
 CONFIG_TRACING_SUPPORT=y
-CONFIG_FTRACE=y
-# CONFIG_FUNCTION_TRACER is not set
-# CONFIG_PREEMPTIRQ_EVENTS is not set
-# CONFIG_IRQSOFF_TRACER is not set
-# CONFIG_PREEMPT_TRACER is not set
-# CONFIG_SCHED_TRACER is not set
-# CONFIG_FTRACE_SYSCALLS is not set
-# CONFIG_TRACER_SNAPSHOT is not set
-CONFIG_BRANCH_PROFILE_NONE=y
-# CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
-# CONFIG_PROFILE_ALL_BRANCHES is not set
-# CONFIG_STACK_TRACER is not set
-# CONFIG_BLK_DEV_IO_TRACE is not set
-# CONFIG_PROBE_EVENTS is not set
-CONFIG_CPU_FREQ_SWITCH_PROFILER=y
-# CONFIG_FTRACE_STARTUP_TEST is not set
-# CONFIG_TRACEPOINT_BENCHMARK is not set
-# CONFIG_RING_BUFFER_BENCHMARK is not set
-# CONFIG_RING_BUFFER_STARTUP_TEST is not set
-# CONFIG_TRACE_ENUM_MAP_FILE is not set
-CONFIG_TRACING_EVENTS_GPIO=y
+# CONFIG_FTRACE is not set
 
 #
 # Runtime Testing
@@ -4315,7 +4278,7 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_SECURITY_SMACK is not set
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
-CONFIG_SECURITY_YAMA=n
+# CONFIG_SECURITY_YAMA is not set
 CONFIG_INTEGRITY=y
 # CONFIG_INTEGRITY_SIGNATURE is not set
 CONFIG_INTEGRITY_AUDIT=y
@@ -4479,7 +4442,7 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
-CONFIG_BINARY_PRINTF=y
+# CONFIG_BINARY_PRINTF is not set
 
 #
 # Library routines
